src/test/deca/codegen/extension/valid/created/Objet/This.deca
// Description:
// Test du this
// Resultats:
//

class A{
    int a;
    int b;
    void A(int a,int b){
        this.a = a;
        this.b = b;
    }
}