src/test/deca/codegen/extension/invalid/created/DivisionBySelectionZero.deca
// Description:
//  Division par une Selection nulle
// Resultats:
//  Exception in thread "main" java.lang.ArithmeticException: / by zero
//	at DivisionBySelectionZero.main(Unknown Source)

class A{
    int a;
    void A(){
        this.a = 0;
    }
}

{
    A newA = new A();
    int b = 10;
    newA.A();
    b = b / newA.a;
}